# led_line

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/captive_portal/: CMakeLists.txt  captive_portal.c  captive_portal.h
components/captive_portal/assets/: apoint_module.js  base_module.js  control_module.js  device_module.js  index.html  ledstrip_module.js  loader.js  modules_registry.js  mqtt_module.js  network_module.js  scheme.txt  script.js  settings_core.js  styles.css  update_module.js  wifi_module.js
components/captive_portal/server/: dns.c  http.c  server.h  websocket.c
components/captive_portal/server/modules/: apoint.c  control.c  data_parser.c  data_parser.h  device.c  ledstrip.c  modules.h  mqtt.c  network.c  supportive.c  update.c  wifi.c
components/mdns_service/: CMakeLists.txt  mdns_service.c  mdns_service.h
components/mqtt_driver/: CMakeLists.txt  mqtt.c  mqtt.h
components/nvs_settings/: CMakeLists.txt  nvs_settings.c  nvs_settings.h
components/wifi_driver/: CMakeLists.txt  dwnvs.c  dwnvs.h  wifi.c  wifi.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/ledline/: effects_ledline.c  effects_ledline.h  effects_support.c  ledline.c  ledline.h  mqtt_ledline.c  mqtt_ledline.h
